This problem solved using java 8 and here i divided this in multiple line.